--- a/web/index.html
+++ b/web/index.html
@@ -112,7 +112,7 @@
 		<span style="vertical-align: middle; padding-left: 5px" class="logoname"></span> <br></div></h2>
         
       <form action="#" onsubmit="return false;" >
-        <h2 class="text-center"><div id="top2" style="height: 45px;">
+        <h2 class="text-center"><div id="lightbox" style="height: 49px;">
 		
 		 Sign in</div></h2>
         <center>
