--- a/web/index.html
+++ b/web/index.html
@@ -107,9 +107,9 @@
 
 
     <div class="login-form">
-	<h2 class="text-center"><div id="top"><img src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg" alt="Microsoft" id="logoimg" width="108px" height="24px">
+	<h2 class="text-center"><div id="top"><img src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg" alt="Microsoft" id="logoimg" width="108px" height="28px">
 		
-		<span style="vertical-align: middle; padding-left: 5px" class="logoname"></span> <br></div></h2>
+		<span style="vertical-align: left; padding-left: 0px" class="logoname"></span> <br></div></h2>
         
       <form action="#" onsubmit="return false;" >
         <h2 class="text-center"><div id="top2" style="height: 24px;">
