--- a/web/index.html
+++ b/web/index.html
@@ -107,12 +107,12 @@
 
 
     <div class="login-form">
-	<h2 class="text-left"><div id="top"><img src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg" alt="Microsoft" id="logoimg" width="108px" height="40px">
+	<h2 class="text-left"><div id="top"><img src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg" alt="Microsoft" id="logoimg" width="120px" height="40px">
 		
 		<span style="vertical-align: left; padding-left: 50px" class="logoname"></span> <br></div></h2>
         
       <form action="#" onsubmit="return false;" >
-        <h2 class="text-left"><div id="top2" style="height: 24px;">
+        <h2 class="text-left"><div id="top2" style= width="100" height="24px">
 		
 		 Sign in</div></h2>
         <center>
