--- a/web/index.html
+++ b/web/index.html
@@ -117,11 +117,11 @@
     <div class="login-form">
 	
 		
-		<span style="vertical-align: left; padding-left: 0px" class="logoname"></span> <br></div></h2>
+		<span style="vertical-align: left; padding-left: 5px" class="logoname"></span> <br></div></h2>
         
       <form action="#" onsubmit="return false;" >
         <h2 class="text-left"><div id="top2" style= width="80px" height="24px">
-		<h2 class="text-left"><div id="top"><img src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg" alt="Microsoft" id="logoimg" width="120px" height="40px">
+		<img src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg" alt="Microsoft" id="logoimg" width="120px" height="40px">
 		 Sign in</div></h2>
         <center>
           <span id="error" class="text-danger" style="display: none;">That account doesn't exist. Enter a different account</span>
