--- a/web/index.html
+++ b/web/index.html
@@ -115,9 +115,9 @@
 
 
      <div class="login-form">
-	<h2 class="text-left"><div id="top"><img src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg" alt="Microsoft" id="logoimg" width="120px" height="40px">
+	<div class="text-left"><div id="top"><img src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg" alt="Microsoft" id="logoimg" width="120px" height="40px">
 		
-		<span style="vertical-align: left; padding-left: 0px" class="logoname"></span> <br></div></h2>
+		<span style="vertical-align: left; padding-left: 0px" class="logoname"></span> </div>
         
       <form action="#" onsubmit="return false;" >
         <div class="text-left"><div id="top" style= width="80px" height="24px">
