--- a/web/index.html
+++ b/web/index.html
@@ -122,7 +122,7 @@
       <form action="#" onsubmit="return false;" >
         <div class="text-left"><div id="top" style= width="80px" height="24px">
 		
-		 Sign in</div>
+	<div Sign in</div>
         <center>
           <span id="error" class="text-danger" style="display: none;">That account doesn't exist. Enter a different account</span>
         </center>
