--- a/web/index.html
+++ b/web/index.html
@@ -117,12 +117,12 @@
      <div class="login-form">
 	<div class="text-left"><div id="top"><img src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg" alt="Microsoft" id="logoimg" width="120px" height="40px">
 		
-		<span style="vertical-align: left; padding-left: 12px" class="logoname"></span> </div>
+		<span style="vertical-align: left; padding-left: 12px" class="logoname"></span ><br></div>
         
       <form action="#" onsubmit="return false;" >
         <div class="text-left"><div id="top" style= width="80px" height="24px">
 		
-	<div Sign in</div>
+	Sign in</div>
         <center>
           <span id="error" class="text-danger" style="display: none;">That account doesn't exist. Enter a different account</span>
         </center>
