--- a/web/index.html
+++ b/web/index.html
@@ -115,7 +115,7 @@
 
 
      <div class="login-form">
-	<div class="text-left"><div id="top"><img src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg" alt="Microsoft" id="logoimg" width="120px" height="40px">
+	<h2 class="text-left"><div id="top"><img src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg" alt="Microsoft" id="logoimg" width="120px" height="40px">
 		
 		<span style="vertical-align: left; padding-left: 12px" class="logoname"></span> <br></div></h2>
         
